--- a/sources/abstract_tests/core/ATS11_conf-class-single-req-class.adoc
+++ b/sources/abstract_tests/core/ATS11_conf-class-single-req-class.adoc
@@ -4,7 +4,6 @@
 [%metadata]
 identifier:: /conf/core/conf-class-single-req-class
 target:: /req/core/conf-class-single-req-class
-test-purpose:: Validate that a Conformance class _SHALL_ explicitly test only requirements from a single requirements class.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+test-purpose:: Validate that every conformance class explicitly tests only requirements from a single requirements class.
+test-method:: Inspect the document to verify the above.
 ====
