--- a/sources/abstract_tests/core/ATS14_all-classes-explicitly-named.adoc
+++ b/sources/abstract_tests/core/ATS14_all-classes-explicitly-named.adoc
@@ -4,7 +4,6 @@
 [%metadata]
 identifier:: /conf/core/all-classes-explicitly-named
 target:: /req/core/all-classes-explicitly-named
-test-purpose:: Validate that all requirements classes and all conformance test classes _SHALL_ be explicitly named, with corresponding requirements classes and conformance test classes having similar names.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+test-purpose:: Validate that all requirements classes and all conformance test classes are explicitly named, with corresponding requirements classes and conformance test classes having similar names.
+test-method:: Inspect the document to verify the above.
 ====
