--- a/sources/abstract_tests/core/ATS2_assigned-uri.adoc
+++ b/sources/abstract_tests/core/ATS2_assigned-uri.adoc
@@ -5,7 +5,6 @@
 identifier:: /conf/core/all-components-assigned-uri
 target:: /req/core/all-components-assigned-uri
 test-purpose:: Validate that each component of a standard, including requirements, requirements modules, requirements classes, 
-conformance test, conformance modules, and conformance test classes _SHALL_ be assigned a unique identifer or label.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+conformance test, conformance modules, and conformance test classes are assigned a unique identifer or label.
+test-method:: Inspect the document to verify the above.
 ====
