--- a/sources/abstract_tests/core/ATS16_co-dependent-requirements.adoc
+++ b/sources/abstract_tests/core/ATS16_co-dependent-requirements.adoc
@@ -4,7 +4,6 @@
 [%metadata]
 identifier:: /conf/core/co-dependent-requirements
 target:: /req/core/co-dependent-requirements
-test-purpose:: Validate that if any two requirements are co-dependent (each dependent on the other) then they _SHALL_ be in the same requirements class. And if any two requirements classes are co-dependent, they _SHALL_ be merged into a single class.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+test-purpose:: Validate that if any two requirements are co-dependent (each dependent on the other) then they are in the same requirements class. And if any two requirements classes are co-dependent, they have been merged into a single class.
+test-method:: Inspect the document to verify the above.
 ====
