--- a/sources/abstract_tests/core/ATS23_core-and-extensions.adoc
+++ b/sources/abstract_tests/core/ATS23_core-and-extensions.adoc
@@ -4,7 +4,6 @@
 [%metadata]
 identifier:: /conf/core/core-and-extensions
 target:: /req/core/core-and-extensions
-test-purpose:: Validate that each standard conformant to the ModSpec _SHALL_ consist of a core and some number of requirements classes defined as extensions to that core.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+test-purpose:: Validate that each standard conformant to the ModSpec consists of a core and some number of requirements classes defined as extensions to that core.
+test-method:: Inspect the document to verify the above.
 ====
