--- a/sources/abstract_tests/core/ATS24_extensions-conformant-to-modspec.adoc
+++ b/sources/abstract_tests/core/ATS24_extensions-conformant-to-modspec.adoc
@@ -4,7 +4,6 @@
 [%metadata]
 identifier:: /conf/core/extensions-conformant-to-the-modspec
 target:: /req/core/extensions-conformant-to-the-modspec
-test-purpose:: Validate that a standard conformant to the ModSpec _SHALL_ require all conformant extensions to be conformant to the ModSpec.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+test-purpose:: Validate that a standard conformant to the ModSpec requires all conformant extensions to be conformant to the ModSpec.
+test-method:: Inspect the document to verify the above.
 ====
