--- a/sources/abstract_tests/core/ATS26_optional-requirements.adoc
+++ b/sources/abstract_tests/core/ATS26_optional-requirements.adoc
@@ -4,7 +4,6 @@
 [%metadata]
 identifier:: /conf/core/optional-requirements
 target:: /req/core/optional-requirements
-test-purpose:: Validate that the only conditional (optional) requirements acceptable in a standard conformant with the ModSpec _SHALL_ be expressible as a list of conformance classes to be passed.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+test-purpose:: Validate that the only conditional (optional) requirements acceptable in a standard conformant with the ModSpec are expressed as a list of conformance classes to be passed.
+test-method:: Inspect the document to verify the above.
 ====
