--- a/sources/abstract_tests/core/ATS3_vocabulary.adoc
+++ b/sources/abstract_tests/core/ATS3_vocabulary.adoc
@@ -4,7 +4,6 @@
 [%metadata]
 identifier:: /conf/core/vocabulary-and-parent-req-class
 target:: /req/core/vocabulary-and-parent-req-class
-test-purpose:: Validate that requirements on the use and interpretation of vocabulary _SHALL_ be in the requirements class where that use or interpretation is used.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+test-purpose:: Validate that requirements on the use and interpretation of vocabulary are in the requirements class where that use or interpretation is used.
+test-method:: Inspect the document to verify the above.
 ====
