--- a/sources/abstract_tests/core/ATS5_test-class-single-standardization-target.adoc
+++ b/sources/abstract_tests/core/ATS5_test-class-single-standardization-target.adoc
@@ -4,7 +4,7 @@
 [%metadata]
 identifier:: /conf/core/test-class-single-standardization-target-type
 target:: /req/core/test-class-single-standardization-target-type
-test-purpose:: Validate that all conformance tests in a single conformance test class in a conformant standard _SHALL_ have the same standardization target type.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+test-purpose:: Validate that all conformance tests in a single conformance test class in a conformant 
+standard have the same standardization target type.
+test-method:: Inspect the document to verify the above.
 ====
