--- a/sources/abstract_tests/core/ATS7_requirements-test-suite-structure.adoc
+++ b/sources/abstract_tests/core/ATS7_requirements-test-suite-structure.adoc
@@ -4,7 +4,6 @@
 [%metadata]
 identifier:: /conf/core/requirements-test-suite-structure
 target:: /req/core/requirements-test-suite-structure
-test-purpose:: Validate that the requirements structure of the document _SHALL_ be in a logical correspondence with the test suite structure.
-Test Method:: Inspect the document to verify the above.
-Test Type:: Conformance
+test-purpose:: Validate that the requirements structure of the document are in a logical correspondence with the test suite structure.
+test-method:: Inspect the document to verify the above.
 ====
