--- a/sources/part1/04-terms-and-defs.adoc
+++ b/sources/part1/04-terms-and-defs.adoc
@@ -10,4 +10,4 @@ Terms not defined here take their meaning from computer science or from their
 Standard English (common US and UK) meanings. The form of the definitions is
 defined by ISO Directives.
 
-NOTE: All terms and definitions in Clause 4 of the OGC ModSpec: Core are relevant and used in this Part 1.
+NOTE: All terms and definitions in Clause 4 of the OGC ModSpec: Core are relevant and used in this Part.
