Change from Part 1 to Part 2

--- a/sources/part1/02-conformance.adoc
+++ b/sources/part1/02-conformance.adoc
@@ -1,6 +1,6 @@
 == Conformance
 
-Conformance to the ModSpec Part 1: UML by technical implementation standards 
+Conformance to the ModSpec: Part 2 - UML Standard by technical implementation standards 
 can be tested by inspection. The test suite is in <<annex-A>>.
 
 There is one conformance class for this document for:
