--- a/sources/release-notes-1-1/sections/clause-4-change-log.adoc
+++ b/sources/release-notes-1-1/sections/clause-4-change-log.adoc
@@ -44,6 +44,7 @@ See <<Clause_Critical>> for more information on critical changes and
 | GitHub| 38  | A | All sections | Added bookmarks and anchors | Ease of navigation.
 | GitHub| 8  | A | Preface | Rewrote Preface  | Clarity and shorten document
 | GitHub| 17, 18, 20  | A | Future Work | Added new future work items for JSON and RDFS, SHACL, and OWL to state requirements.  | Completeness for submitted issue resolution
+| Other | NA | A | Preface | Rewrote document definitions | Comply with OGC directive 49
 | GitHub| 12 | A | Preface | Rewrote Forward | Clarity and shorten document
 | Other | NA  | A | Scope 1.0 | Rewrote Scope | Clarity and shorten document
 | Other | NA  | A | New Clause 1.0 | Add Clause `Understanding the ModSpec` | Provide guidance to reader 
